# ListaToDo

./: Board.cpp  Board.h  Board.ui  CMakeLists.txt  Important.cpp  Important.h  Important.ui  ListToDo.bak.ui  ListToDo.cpp  ListToDo.h  ListToDo.ui  README.md  TESTNONTOCCARE  TESTNONTOCCARE2  backup  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  prova  reserved  task.cpp  task.h  task.ui
test/: CMakeLists.txt  Test.cpp
